--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 
 .bgr{
-  background-color: #D3D3D3;
+  background-color:#B0B0B0;
 }
 
 .main{
@@ -12,7 +12,7 @@
   text-align: center;
   line-height: 15px;
   min-height: 30px;
-  background-color: #D3D3D3;
+  color: white;
   padding-bottom: 10px;
 }
 
@@ -29,6 +29,10 @@
   padding: 10px;
 }
 
+.pdgtopselect{
+  padding-top: 20px;
+}
+
 .textcenter{
   text-align: center;
 }
@@ -36,6 +40,11 @@
 .flexy-space-betw{
   display: flex;
   justify-content: space-between;
+}
+
+.flexy-space-ar{
+  display: flex;
+  justify-content: space-around;
 }
 
 
@@ -51,6 +60,10 @@
   justify-content: center;
 }
 
+.flexy-align{
+  align-items: center;
+}
+
 .flexy-vertical-betw{
   display: flex;
   flex-direction: column;
@@ -59,6 +72,8 @@
 
 .todo{
   width: 100%;
+  height: 35px;
+  border-radius: 5px;
 }
 
 .done{
@@ -69,14 +84,41 @@
   margin: 10px;
 }
 
+.wide{
+  width: 100%;
+}
+
+.btnsize{
+  width: 50%;
+}
+
 /*.helpborder{
   border: 1px solid red;
 }*/
 
-#taskcontent{
-  margin-bottom: 10px;
+.marginactive{
+  margin: 0 0 0 0;
 }
+
 
 .listclass{
   list-style-type: none;
+}
+
+.headercolor{
+  background-color: #00C851;
+  border-bottom: 3px solid white;
+}
+
+.seccolor{
+  background-color: #ffbb33;
+  margin-bottom: 0;
+}
+
+.activity{
+  color: white;
+}
+
+.whitebor{
+  border-top: 3px solid white;
 }
