--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
 *{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: "Roboto", sans-serif;
 }
 
@@ -14,7 +17,6 @@
 .header{
   text-align: center;
   line-height: 15px;
-  min-height: 30px;
   color: white;
   padding-bottom: 10px;
 }
@@ -32,9 +34,6 @@
   padding: 8px;
 }
 
-/*.pgdtwo{
-  padding: 20px;
-}*/
 
 .pdgtopselect{
   padding-top: 15px;
@@ -83,7 +82,7 @@
 
 .todo{
   width: 100%;
-  height: 35px;
+  min-height: 35px;
   border-radius: 5px;
 }
 
@@ -95,11 +94,6 @@
   margin: 10px;
 }
 
-.checkStyle{
-  /*margin: 10px;*/
-  color: green;
-}
-
 .wide{
   width: 100%;
 }
@@ -108,14 +102,9 @@
   width: 50%;
 }
 
-/*.helpborder{
-  border: 1px solid red;
-}*/
-
 .marginactive{
   margin: 0 0 0 0;
 }
-
 
 .listclass{
   list-style-type: none;
@@ -139,16 +128,19 @@
 }
 
 .height{
-  height: 100%;
-}
-
-.help{
-  margin: 0 auto;
-  padding: 0 auto;
+  min-height: 100%;
 }
 
 .mainheight{
-  min-height: 330px;
+  min-height: 50vh;
+}
+
+.menuheight{
+  min-height: 37vh;
+}
+
+.navheight{
+  min-height: 9vh;
 }
 
 .mrgtop{
@@ -230,6 +222,4 @@ padding: 2px 16px;
   float: right;
   font-weight: bold;
   color: #76FF03;
-  /*margin-top: 3px;
-  font-size: 30px;*/
 }
